--- a/projeto-sds3/backend/src/main/resources/application.yml
+++ b/projeto-sds3/backend/src/main/resources/application.yml
@@ -1,5 +1,6 @@
+#Se a variável APP_PROFILE não estiver definida no ambiente usa o test, por isso o : #
 spring:
   jpa:
     open-in-view: false
   profiles:
-    active: test
+    active: ${APP_PROFILE:test}
