--- a/projeto-sds3/frontend/package.json
+++ b/projeto-sds3/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.9.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -12,12 +13,14 @@
     "@types/react-dom": "^17.0.0",
     "add": "^2.0.6",
     "apexcharts": "^3.26.1",
+    "axios": "^0.21.1",
     "bootstrap": "^5.0.0",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "svg-element-attributes": "^2.0.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "yarn": "^1.22.10"
