--- a/projeto-sds3/frontend/tsconfig.json
+++ b/projeto-sds3/frontend/tsconfig.json
@@ -7,6 +7,7 @@
       "dom.iterable",
       "esnext"
     ],
+    "typeRoots": ["./src/@types", "./node_modules/@types"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -22,6 +23,7 @@
     "jsx": "react-jsx"
   },
   "include": [
-    "src"
-, "public/index.tsx"  ]
+    "src",
+    "public/index.tsx"
+  ]
 }
